# closed_chain_affordance_ros

./: README.md  cca_robot_package_creator.sh  et
affordance_util_ros/: CMakeLists.txt  package.xml
affordance_util_ros/include/affordance_util_ros/: affordance_util_ros.hpp
affordance_util_ros/src/affordance_util_ros/: affordance_util_ros.cpp
cc_affordance_planner_ros/: CMakeLists.txt  package.xml
cc_affordance_planner_ros/include/cc_affordance_planner_ros/: cc_affordance_planner_ros.hpp
cc_affordance_planner_ros/src/cc_affordance_planner_ros/: cc_affordance_planner_ros.cpp
cca_interactive_goals/: CMakeLists.txt  package.xml  plugin_description.xml
cca_interactive_goals/include/cca_interactive_goals/: cca_interactive_goals_node.hpp  interactive_marker_manager.hpp  panel.hpp  panel_old.hpp
cca_interactive_goals/launch/: cca_interactive_goals.launch.py
cca_interactive_goals/rviz/: cca_interactive_goals.rviz
cca_interactive_goals/src/: cca_interactive_goals_node.cpp  interactive_marker_manager.cpp  panel.cpp
cca_interactive_goals/src/ui/: panel.ui
cca_ros_action/: CMakeLists.txt  README.md  package.xml
cca_ros_action/include/cca_ros_action/: cca_ros_action.hpp  visibility_control.h
cca_ros_action/src/: cca_ros_action_node.cpp
cca_ros_action/src/cca_ros_action/: cca_ros_action.cpp
cca_ros_behavior/: CMakeLists.txt  README.md  package.xml
cca_ros_behavior/include/cca_ros_behavior/: cca_ros_behavior.hpp
cca_ros_behavior/src/cca_ros_behavior/: cca_ros_behavior.cpp
cca_ros_msgs/: CMakeLists.txt  README.md  package.xml
cca_ros_msgs/action/: CcaRosAction.action
cca_ros_msgs/msg/: Goal.msg  KinematicState.msg  MotionType.msg  PlannerConfig.msg  PlanningRequest.msg  ScrewInfo.msg  ScrewLocationMethod.msg  ScrewType.msg  TaskDescription.msg  UpdateMethod.msg
cca_ros_util/: CMakeLists.txt  README.md  package.xml
cca_ros_util/include/cca_ros_util/: cca_ros_util.hpp
cca_ros_util/src/cca_ros_util/: cca_ros_util.cpp
cca_ros_viz/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
cca_ros_viz/include/cca_ros_viz/: cca_ros_rviz_plugin.hpp  interactive_marker_manager.hpp
cca_ros_viz/rviz/: cca_ros_viz.rviz
cca_ros_viz/src/: cca_ros_viz_node.cpp
cca_ros_viz/src/cca_ros_viz/: cca_ros_rviz_plugin.cpp  interactive_marker_manager.cpp
cca_ros_viz/src/ui/: cca_ros_rviz_plugin.ui
cca_ros_viz_msgs/: CMakeLists.txt  package.xml
cca_ros_viz_msgs/action/: CcaRosAction.action
cca_ros_viz_msgs/msg/: Goal.msg  GripperGoalType.msg  KinematicState.msg  MotionType.msg  PlannerConfig.msg  PlanningRequest.msg  ScrewInfo.msg  ScrewLocationMethod.msg  ScrewType.msg  TaskDescription.msg  UpdateMethod.msg  VirtualScrewOrder.msg
cca_ros_viz_msgs/srv/: CcaRosViz.srv
closed_chain_affordance/cca_ik_comp/: CMakeLists.txt  package.xml
closed_chain_affordance/cca_ik_comp/launch/: arm_cca_ik_comp.launch.py  cca3_ik_comp.launch.py  joint_state_publisher.launch.py
closed_chain_affordance/cca_ik_comp/src/: cca_ik_comp_node.cpp
closed_chain_affordance/moveit_plan_and_viz/: CMakeLists.txt
closed_chain_affordance/moveit_plan_and_viz/launch/: joint_state_publisher.launch.py
closed_chain_affordance/moveit_plan_and_viz/src/: moveit_plan_and_viz_node.cpp
moveit_plan_and_viz_msgs/: CMakeLists.txt  package.xml
plan_req_builder/: CMakeLists.txt  package.xml
plan_req_builder/include/plan_req_builder/: plan_req_builder.hpp
plan_req_builder/src/: plan_req_builder.cpp
robot_state_recorder/: CMakeLists.txt  README.md  package.xml
robot_state_recorder/data/: act_tf_and_joint_states_data.csv  pred_tf_and_joint_states_data.csv
robot_state_recorder/data/dss_dufflebag_unzipping1/: act_tf_and_joint_states_data.csv  other_info.txt  pred_tf_and_joint_states_data.csv
robot_state_recorder/data/dss_dufflebag_unzipping2/: act_tf_and_joint_states_data.csv  other_info.txt  pred_tf_and_joint_states_data.csv
robot_state_recorder/data/dss_dufflebag_unzipping3/: act_tf_and_joint_states_data.csv  other_info.txt  pred_tf_and_joint_states_data.csv
robot_state_recorder/data/dss_dufflebag_unzipping4/: act_tf_and_joint_states_data.csv  other_info.txt  pred_tf_and_joint_states_data.csv
robot_state_recorder/data/dss_dufflebag_unzipping5/: act_tf_and_joint_states_data.csv  other_info.txt  pred_tf_and_joint_states_data.csv
robot_state_recorder/data/dss_nut1/: act_tf_and_joint_states_data.csv  other_info.txt  pred_tf_and_joint_states_data.csv
robot_state_recorder/data/dss_nut2/: act_tf_and_joint_states_data.csv  other_info.txt  pred_tf_and_joint_states_data.csv
robot_state_recorder/data/dss_nut3/: act_tf_and_joint_states_data.csv  other_info.txt  pred_tf_and_joint_states_data.csv
robot_state_recorder/data/dss_nut4/: act_tf_and_joint_states_data.csv  other_info.txt  pred_tf_and_joint_states_data.csv
robot_state_recorder/data/dss_nut5/: act_tf_and_joint_states_data.csv  other_info.txt  pred_tf_and_joint_states_data.csv
robot_state_recorder/data/dss_pelican_opening1/: act_tf_and_joint_states_data.csv  other_info.txt  pred_tf_and_joint_states_data.csv
robot_state_recorder/data/dss_pelican_opening2/: act_tf_and_joint_states_data.csv  other_info.txt  pred_tf_and_joint_states_data.csv
robot_state_recorder/data/dss_pelican_opening3/: act_tf_and_joint_states_data.csv  other_info.txt  pred_tf_and_joint_states_data.csv
robot_state_recorder/data/dss_pelican_opening4/: act_tf_and_joint_states_data.csv  other_info.txt  pred_tf_and_joint_states_data.csv
robot_state_recorder/data/dss_pelican_opening5/: act_tf_and_joint_states_data.csv  other_info.txt  pred_tf_and_joint_states_data.csv
robot_state_recorder/src/: robot_state_recorder_node.cpp
ros/cc_affordance_planner_ros/: CMakeLists.txt  package.xml
ros/cc_affordance_planner_ros/src/: cc_affordance_planner_ros_node.cpp
ros/cc_affordance_spot_description/: CMakeLists.txt  package.xml
ros/cc_affordance_spot_description/config/: cc_affordance_spot_ros_setup.yaml
ros/cc_affordance_spot_description/launch/: cc_affordance_spot_description.launch.py
ros/moveit_plan_and_viz/: CMakeLists.txt
(+53 files in other folders)
