<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cc_affordance_planner_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jpanthi@utexas.edu">crasun</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--Dependencies that need to be built before this package can be built-->
  <depend>rclcpp</depend>
  <depend>moveit_plan_and_viz_msgs</depend>
  <depend>affordance_util_ros</depend>
  <!--******************************************************************-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
